crates/bitnet-logits/tests/snapshots/snapshot_wave33__w33_top_k_1_of_4.snap
---
source: crates/bitnet-logits/tests/snapshot_wave33.rs
expression: "format!(\"kept={kept} finite={finite_mask:?}\")"
---
kept=1 finite=[false, false, true, false]
