crates/bitnet-logits/tests/snapshots/snapshot_wave33__w33_top_k_3_of_5.snap
---
source: crates/bitnet-logits/tests/snapshot_wave33.rs
expression: "format!(\"kept={kept} finite={finite_mask:?}\")"
---
kept=3 finite=[false, true, true, false, true]
