crates/bitnet-logits/tests/snapshots/snapshot_wave33__w33_top_p_high_threshold.snap
---
source: crates/bitnet-logits/tests/snapshot_wave33.rs
expression: rounded
---
[
    0.5,
    0.3,
    0.15,
    0.0,
]
